[#389] Add option 'blockSystemExit' to 'java' mojo
This new option enables users to stop programs called by 'exec:java'
from calling System::exit, terminating not just the mojo but the whole
Maven JVM.

Closes #389.
Relates to #388.